# gbs_hello

./: .gitignore  Makefile.in  configure  configure.ac
doc/: Makefile.am  Makefile.in  gbs_hello.texi
src/: Makefile.am  Makefile.in  gbs_hello.c  gbs_hello.h
