dnl Process this file with autoconf to produce a configure script.

dnl Standard configure.ac layout requires this
AC_INIT(gbs_hello, 1.0)

dnl Automake requires this
AM_INIT_AUTOMAKE

dnl Checks for programs.
AC_PROG_CC

dnl Create Makefile from Makefile.in
AC_CONFIG_FILES([Makefile doc/Makefile src/Makefile])

dnl Standard configure.ac layout requires this
AC_OUTPUT
